syntax = "proto3";
package raft;

// IMPORTANT: matches your Go import: "distributed-kv/raft"
option go_package = "distributed-kv/raft;raft";

// Super-minimal log entry for demo replication
message LogEntry {
  uint64 term   = 1;
  uint64 index  = 2;
  string key    = 3;
  string value  = 4;
  int64  timestamp = 5;
}

message AppendEntriesRequest {
  uint64 term      = 1;
  string leader_id = 2;
  repeated LogEntry entries = 3;
}

message AppendEntriesResponse {
  bool success = 1;
}

message RequestVoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
}

message RequestVoteResponse {
  bool vote_granted = 1;
}

service RaftService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}
